# news_ticker

./: CMakeLists.txt  README.md  banner.h  main.cpp  main_array.cpp  slide.cpp
include/: counter.h  slide.h
src/: CMakeLists.txt  counter.cpp  main.cpp  slide.cpp  test
tests/: CMakeLists.txt  slide_tests.cpp
